# jxl2txt

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  pixi.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: condapackage.yml  pythonpackage.yml  pythonrelease.yml
ci/: cli-help.ps1
ci/appveyor/: deploy_to_anaconda.ps1
conda-build/: meta.yaml
conda-recipe/: meta.yaml
docs/: Makefile  make.bat
docs/source/: cli.rst  conf.py  index.rst
docs/source/api/: index.rst  jxl2txt.rst  modules.rst
docs/source/cli/: cli.convert.txt  cli.info.txt  cli.jxl2txt.txt
jxl2txt/: _version.py  jxl2txt.py
jxl2txt/tools/: console.py
tests/: test_cli.py
